# aicamera

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
.cursor/: hooks.json
.cursor/hooks/: auto-git.ps1
.github/workflows/: ci.yml
config/: example.json  test-4ch-integration.json  test-4ch.json
deploy/: README.md
deploy/config/: config.json
deploy/logrotate/: edger-rec
deploy/systemd/: edger-ai.service  edger-rec.target  edger-record.service  edger-web.service
docker/: README.md  entrypoint.sh
docs/: AI.md  ARCHITECTURE.md  DEMO.md  HARDWARE.md  PRD.md  ROADMAP.md  SOFTWARE.md
firmware/: CMakeLists.txt
firmware/apps/demo/: main.cpp
firmware/apps/qt-config/: CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.hpp  roi_editor_widget.cpp  roi_editor_widget.hpp
firmware/apps/web-server/: CMakeLists.txt  README.md  main.cpp  web_server.cpp  web_server.hpp
firmware/apps/web-server/static/: index.html
firmware/board/rv1126/: README.md  toolchain.cmake
firmware/board/x86/: README.md
firmware/edger-core/: CMakeLists.txt
firmware/edger-core/include/edger/: alert_event.hpp  config.hpp  config_reload.hpp  record_index.hpp  web_auth.hpp
firmware/edger-core/include/edger/geometry/: polygon.hpp
firmware/edger-core/include/edger/util/: fs.hpp
firmware/edger-core/src/: config.cpp  config_reload.cpp  fs.cpp  polygon.cpp  record_index.cpp  web_auth.cpp
firmware/services/ai-svc/: CMakeLists.txt
firmware/services/ai-svc/apps/ai-svc/: main.cpp
firmware/services/ai-svc/include/edger/: ai_manager.hpp  ai_svc.hpp  intrusion_detector.hpp
firmware/services/ai-svc/src/: ai_manager.cpp  ai_svc.cpp  intrusion_detector.cpp
firmware/services/alert-svc/: CMakeLists.txt
firmware/services/alert-svc/include/edger/: alert_dispatcher.hpp  alert_svc.hpp  http_client.hpp
firmware/services/alert-svc/src/: alert_dispatcher.cpp  alert_svc.cpp  http_client.cpp
firmware/services/media-svc/: CMakeLists.txt
firmware/services/media-svc/include/edger/: media_svc.hpp
firmware/services/media-svc/src/: media_svc.cpp
firmware/services/record-svc/: CMakeLists.txt
firmware/services/record-svc/apps/record-svc/: main.cpp
firmware/services/record-svc/include/edger/: record_manager.hpp  record_svc.hpp
firmware/services/record-svc/src/: record_manager.cpp  record_svc.cpp
firmware/tests/: CMakeLists.txt  test_week1_config.cpp  test_week2_index.cpp  test_week2_record_options.cpp  test_week2_retention.cpp  test_week3_alert.cpp  test_week3_intrusion.cpp  test_week3_polygon.cpp  test_week4_config_edit.cpp  test_week4_reload.cpp  test_week5_record_query.cpp  test_week5_web_auth.cpp
scripts/: build-qt-x86.sh  build-web-x86.sh  build-x86.sh  docker-build.sh  docker-save.sh  install-x86.sh  setup-github.ps1  test-all.sh  test-week2-integration.sh  test-week3-integration.sh  test-week4-integration.sh  test-week5-integration.sh  test-week6-integration.sh  webhook_server.py
